[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.814972, -1.08249, 0, 0, 0, 0, 640.863, -1.98499, 0, 0, 0, 0, 639.96, 483.56, 0, 0, 0, 0, 0.0875244, 480.853, 0, 0, 0, 0, -0.814972, -1.08249 )
}

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Player" parent="." index="0" instance=ExtResource( 3 )]

SPEED = 300

[node name="MobTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="StartPosition" type="Position2D" parent="." index="4"]

position = Vector2( 322.128, 191.885 )
_sections_unfolded = [ "Transform" ]

[node name="MobPath" type="Path2D" parent="." index="5"]

curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( -0.814972, -1.08249 )
rotation = -0.00140649
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="HUD" parent="." index="6" instance=ExtResource( 4 )]

[connection signal="hit" from="Player" to="." method="game_over"]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="start_game" from="HUD" to="." method="new_game"]


